Adds inverse and memory functions

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
           <div class="calc__button calc__button--border" id="memRecall">MR</div>
           <div class="calc__button calc__button--border" id="memStore">MS</div>
           <div class="calc__button calc__button--border" id="memAdd">M+</div>
-          <div class="calc__button calc__button--border" id="memSubtract">
-            M-
-          </div>
+          <div class="calc__button calc__button--border" id="memMinus">M-</div>
           <div class="calc__button calc__button--border">&lt;</div>
           <div class="calc__button calc__button--border" id="del">CE</div>
           <div class="calc__button calc__button--border" id="clear">C</div>
@@ -33,7 +31,9 @@
           <div class="calc__button calc__button--border num">5</div>
           <div class="calc__button calc__button--border num">6</div>
           <div class="calc__button calc__button--border special">*</div>
-          <div class="calc__button calc__button--border special">1/x</div>
+          <div class="calc__button calc__button--border special" id="inverse">
+            1/x
+          </div>
           <div class="calc__button calc__button--border num">1</div>
           <div class="calc__button calc__button--border num">2</div>
           <div class="calc__button calc__button--border num">3</div>
